--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -77,6 +77,7 @@ body{
 
 }
 .input-wrapper{
+    padding-top: 0;
     max-width:350px;
     padding-right: 20px;
     padding-left: 20px;
@@ -141,8 +142,22 @@ body{
   color: transparent;
 }
 
+/* sign-up */
 
-
+.signup-page .bg-img{
+    height: 500px;
+    width: 100%;
+    border-top-right-radius: 20px ;
+    border-bottom-right-radius: 20px;
+    object-fit: cover;
+}
+.icon-i{
+    position: absolute;
+    right: 20px;   
+    bottom: 20px;    
+    font-size: 24px;
+    cursor: pointer;
+}
 
 
 
