--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -145,7 +145,9 @@ body{
 /* sign-up */
 
 .signup-page .log-button{
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-left: 0;
+    
 }
 .icon-i{
     position: absolute;
@@ -204,7 +206,7 @@ body{
 }
     .custom-card{
     width:400px; 
-    height:800px;
+    height:900px;
     border-radius: 20px;
     padding-top:10px;     
     padding-bottom:10px;
@@ -215,7 +217,15 @@ body{
     font-size: 14px;
     padding-top: 20px;
 }
-
-
+    .log-button{
+    margin-top: 20px;
+    margin-left: 145px;
+    
+}
+    .signup-page .log-button{
+    margin-top: 20px;
+    margin-left: 110px;
+    
+}
 
 }
