--- a/resource/css/home.css
+++ b/resource/css/home.css
@@ -37,11 +37,20 @@ section.home{
     padding: 0 !important;
 }
 .home-card{
-    border: 2px solid #161542;
+    /* border: 2px solid #161542; */
+    margin-top: 5%;
+}
+.card-text{
+    color: #F55197;
+    font-weight: bold;
+}
+.card-title{
+    color: linear-gradient(225.24deg, #7FF5FF 0.41%, #FF6BFC 100%);
 }
 i{
     font-size: 3rem;
 }
+
 footer{
     background-color: #161542;
     height: 10vh;
