--- a/resource/css/home.css
+++ b/resource/css/home.css
@@ -6,6 +6,16 @@ html{
 	text-rendering: optimizeLegibility;
 	scroll-behavior: smooth;
 }
+/* SCROLLBAR */
+::-webkit-scrollbar{
+	width: 5px;
+}
+::-webkit-scrollbar-track{
+	background-color: #020c1b;
+}
+::-webkit-scrollbar-thumb{
+	background-color: #3F3F3B;
+}
 
 nav{
     background-color: #161542;
