--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -157,6 +157,16 @@ body{
     cursor: pointer;
 }
 
+/* pop-up */
+#successAlert {
+    position: fixed;
+    top: 10px;
+    right: 250px;
+    z-index: 1050;
+    /* min-width: 250px; */
+    background-color: #EEE3D8;
+}
+
 
 
 
@@ -226,6 +236,11 @@ body{
     margin-top: 20px;
     margin-left: 110px;
     
+}
+    #successAlert {
+    top: 10px;
+    right: 50px;
+    margin-left: 50px;
 }
 
 }
