--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -145,7 +145,9 @@ body{
 /* sign-up */
 
 .signup-page .log-button{
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-left: 0;
+    
 }
 .icon-i{
     position: absolute;
@@ -153,6 +155,16 @@ body{
     bottom: 20px;    
     font-size: 24px;
     cursor: pointer;
+}
+
+/* pop-up */
+#successAlert {
+    position: fixed;
+    top: 10px;
+    right: 250px;
+    z-index: 1050;
+    /* min-width: 250px; */
+    background-color: #EEE3D8;
 }
 
 
@@ -204,7 +216,7 @@ body{
 }
     .custom-card{
     width:400px; 
-    height:800px;
+    height:900px;
     border-radius: 20px;
     padding-top:10px;     
     padding-bottom:10px;
@@ -215,7 +227,20 @@ body{
     font-size: 14px;
     padding-top: 20px;
 }
-
-
+    .log-button{
+    margin-top: 20px;
+    margin-left: 145px;
+    
+}
+    .signup-page .log-button{
+    margin-top: 20px;
+    margin-left: 110px;
+    
+}
+    #successAlert {
+    top: 10px;
+    right: 50px;
+    margin-left: 50px;
+}
 
 }
