--- a/resource/css/home-admin.css
+++ b/resource/css/home-admin.css
@@ -7,8 +7,11 @@ html{
   text-rendering: optimizeLegibility;
   scroll-behavior: smooth;
 }
-body{
-  height: 100%;
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: 'Montserrat';
 }
 
@@ -176,19 +179,23 @@ main {
 }
 
 /* footer */
-.container {
-  padding-bottom: 100px; /* adjust based on footer height */
+.container{
+  padding-bottom: 50px;
 }
 
-footer{
+main {
+  flex-grow: 1;
+}
+
+/* Your existing footer styles */
+footer {
   background-color: #161542;
-  height: 10vh;
-  margin-top: 3%;
-}
-footer,p,.fa-copyright{
-  font-size: 0.7rem;
 }
 
+footer,p,.fa-copyright{
+ font-size: 0.7rem;
+
+}
 
 
 
@@ -384,6 +391,64 @@ footer,p,.fa-copyright{
 .save-btn:hover {
   background-color: #c9447d;
 }
+
+
+/* equipment css */
+
+.request-form-card {
+  background-color: #E3E3E3; 
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.request-details-title {
+  color: #161542; 
+  font-weight: bold;
+}
+
+.request-item-card {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  box-shadow: none;
+  justify-content: flex-start;
+}
+
+.item-details-simple {
+  display: flex;
+  align-items: center;
+}
+
+.item-name {
+  color: #161542;
+  font-weight: 500;
+  margin: 0;
+  font-size: 1rem;
+}
+
+.finalize-btn {
+  background-color: #f0f8ff;
+  color: #F55197;
+  border: 1px;
+  padding: 10px 30px;
+  border-radius: 15px;
+  font-weight: bold;
+  box-shadow: -4px 4px 4px 0px #00000040;
+  transition: all 0.3s ease;
+}
+
+.finalize-btn:hover,
+.finalize-btn:active{
+  background-color: #F55197;
+  color: #fff;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+
+
+
 
 
 
