--- a/resource/css/home.css
+++ b/resource/css/home.css
@@ -3,7 +3,9 @@
 }
 
 body{
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     font-family: 'Montserrat';
 }
 
@@ -125,18 +127,19 @@ i{
     font-size: 3rem;
 }
 
-
-/*  */
-
-.container {
-  padding-bottom: 100px; /* adjust based on footer height */
+/* footer */
+.container{
+    padding-bottom: 50px;
+}
+main {
+    flex-grow: 1;
 }
 
-footer{
+footer {
     background-color: #161542;
-    height: 10vh;
-    margin-top: 3%;
 }
+
 footer,p,.fa-copyright{
     font-size: 0.7rem;
+
 }
