--- a/resource/css/search.css
+++ b/resource/css/search.css
@@ -509,6 +509,11 @@ footer,p,.fa-copyright{
   white-space: nowrap;
 }
 
+.stock-info-container{
+  display: flex;
+  justify-content: space-between;
+}
+
 .request-button {
   background-color: #F0F8FF;
   width: 250px;
@@ -903,7 +908,297 @@ footer,p,.fa-copyright{
   }
   
 }
+.product-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
 
+.product-popup.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup-content {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  position: relative;
+  transform: scale(0.95);
+  transition: transform 0.3s ease-in-out;
+  text-align: center;
+  max-width: 90%;
+}
+
+.product-popup.show .popup-content {
+  transform: scale(1);
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  color: #999;
+}
+
+.close-btn:hover {
+  color: #555;
+}
+
+.popup-image-container {
+  margin-bottom: 20px;
+}
+
+.popup-image {
+  width: 100%;
+  border-radius: 8px;
+  max-height: 200px;
+  object-fit: cover;
+}
+
+.stock-info {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #161542;
+  margin-left: 10px;
+  white-space: nowrap;
+}
+
+.stock-info-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.request-button {
+  background-color: #F0F8FF;
+  width: 250px;
+  color: #F55197;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.request-button:hover {
+  background-color: #F55197;
+  color: #F0F8FF;
+}
+
+/* Equipment Pop-up Specific Styles */
+#equipment-popup .popup-content {
+  width: 650px;
+  background-color: #E3E3E3;
+}
+
+#equipment-popup .popup-details {
+  text-align: left;
+}
+
+#equipment-popup .equipment-title-container {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+#equipment-popup .equipment-titles {
+  text-align: left;
+  line-height: 1.1;
+}
+#equipment-popup .equipment-title,
+#equipment-popup .reservation-title {
+  font-size: 1.7rem;
+  font-weight: bold;
+  color: #F55197;
+  margin: 0;
+}
+
+
+#equipment-popup .equip-title { 
+  color: #161542; 
+  font-weight:bolder;
+  font-size: 1.5rem;
+  margin: 0; 
+}
+
+#equipment-popup .stock-info {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #161542;
+  white-space: nowrap;
+}
+
+#equipment-popup .reservation-item {
+  background-color: #F0F8FF;
+  border-radius: 8px;
+  padding: 15px 20px;
+  margin-bottom: 10px;
+  font-size: 1.1rem;
+  color: #161542;
+  font-weight: 500;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+#equipment-popup .stock-quantity-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+#equipment-popup .stock-value {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #161542;
+  margin: 0;
+  white-space: nowrap;
+}
+
+/* Chemical Pop-up Specific Styles */
+
+#chemical-popup .request-button {
+  margin-top: 20px;
+}
+
+#chemical-popup .popup-content {
+  width: 550px; 
+  padding: 30px; 
+  background-color: #E3E3E3;
+}
+
+#chemical-popup .popup-image-container {
+  height: 200px; 
+  overflow: hidden;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+#chemical-popup .popup-image {
+  width: 100%;
+  height: 100%; 
+  object-fit: cover;
+}
+
+#chemical-popup .chemical-info-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline; 
+  margin-bottom: 20px; 
+}
+
+#chemical-popup .chemical-titles {
+  text-align: left;
+  line-height: 1.1; 
+  color: #F55197;
+}
+
+#chemical-popup .chemical-title-container {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+#chemical-popup .chemical-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0; 
+  text-align: left;
+}
+
+.chem-title { 
+  color: #161542; 
+  font-weight: bold;
+  font-size: 1.7rem;
+  margin: 0; 
+}
+
+#chemical-popup .stock-info {
+  font-size: 1.3rem; 
+  font-weight: bold;
+  color: #161542;
+  margin-left: 0; 
+  white-space: nowrap;
+  text-align: right; 
+}
+#chemical-popup .request-button-container {
+    margin-top: 30px;
+}
+
+/* Quantity Controls */
+
+.quantity-control-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+  width: 100%;
+}
+
+.quantity-btn {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  color: #555;
+  font-size: 1.5em;
+  padding: 5px 15px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.quantity-btn:hover {
+  background-color: #e0e0e0;
+}
+
+#equipment-decrement-btn,
+#chemical-decrement-btn {
+  border-radius: 5px 0 0 5px;
+}
+
+#equipment-increment-btn,
+#chemical-increment-btn {
+  border-radius: 0 5px 5px 0;
+}
+
+.quantity-input {
+  width: 80px;
+  text-align: center;
+  border: 1px solid #ccc;
+  font-size: 1.2em;
+  padding: 5px 0;
+  -moz-appearance: textfield; 
+
+}
+/* Hide arrows for Chrome, Safari, Edge */
+.quantity-input::-webkit-outer-spin-button,
+.quantity-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+
+
+
+/* Media query to make the stock-info responsive on smaller screens */
 
 
 
