edited css and removed the upload signature part

--- a/resource/css/home-admin.css
+++ b/resource/css/home-admin.css
@@ -399,7 +399,7 @@ footer,p,.fa-copyright{
   background-color: #E3E3E3; 
   padding: 30px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
 .request-details-title {
