edited form-control css

--- a/resource/css/home-admin.css
+++ b/resource/css/home-admin.css
@@ -402,6 +402,11 @@ footer,p,.fa-copyright{
   /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
+.form-control{
+  border: 1px solid #000000;
+  box-shadow: -4px 4px 4px 0px #00000040;
+
+}
 .request-details-title {
   color: #161542; 
   font-weight: bold;
